# gp_arm_final

./: .gitignore  LICENSE  frames_2026-05-26_17.51.22.gv  log.txt  plot_workspace.py  run_sim.sh
imp codes/2encoder_test/: 2encoder_test.ino
imp codes/all_stepper_code/: all_stepper_code.ino
imp codes/all_stepper_with_encoder2/: all_stepper_with_encoder2.ino
imp codes/hub_motor_with_ros/: hub_motor_with_ros.ino
imp codes/test_encoder/: test_encoder.ino
manual/: gp.odt  vision_report.docx  website3.odt  توثيق تشغيل ال urdf.odt  ملف توثيق تشغيل الكاميرا والعمل علي vesion.odt
manual/pcb/: imu_pcb.fzz
src/: auto_capture_images.py  capture_images.py  point3d_extractor.py
src/diff_drive_bridge/: package.xml  setup.py
src/diff_drive_bridge/diff_drive_bridge/: cmd_vel_to_wheel.py  wheel_cmd_to_serial.py
src/hub_motor_controller/: CMakeLists.txt  package.xml
src/hub_motor_controller/src/: hub_motor_node.cpp
src/lever_vision_model/: package.xml  setup.cfg  setup.py
src/lever_vision_model/Elevator_Lever_Pose-1/: README.dataset.txt  README.roboflow.txt  data.yaml
src/lever_vision_model/Elevator_Lever_Pose-1/test/labels/: lever_12_jpg.rf.2092a9a82b2af60acc7234850e70c21f.txt  lever_135_jpg.rf.3639663ea07ea0a3864e485c1ff49476.txt
src/lever_vision_model/Elevator_Lever_Pose-1/train/: labels.cache
src/lever_vision_model/Elevator_Lever_Pose-1/train/labels/: lever_18_jpg.rf.9482cc7c5b9873dc44dbba7ec8906cb3.txt  lever_1_jpg.rf.c29b4f287582329a4ce8e90f2f5b96c0.txt  lever_88_jpg.rf.4cfcb59ae4827edf09f13dd8e21a8149.txt  lever_8_jpg.rf.232c66bea5a7bf86f10c653c6602bb55.txt  lever_97_jpg.rf.6c1c76c4caa2bbe1dc75def47dfe0537.txt
src/lever_vision_model/Elevator_Lever_Pose-1/valid/: labels.cache
src/lever_vision_model/Elevator_Lever_Pose-1/valid/labels/: lever_144_jpg.rf.f8975a0ef8b4f2724750e3fd1f1d78fc.txt  lever_15_jpg.rf.c42051fe40750258589411585c9ee48f.txt
src/lever_vision_model/Elevator_Lever_Pose-2/: README.dataset.txt  README.roboflow.txt  data.yaml
src/lever_vision_model/Elevator_Lever_Pose-2/test/labels/: lever_126_jpg.rf.851b4cefc9131ecf88c5f15d7613846c.txt  lever_20_jpg.rf.edfb091f4dc3d1034a76864dcff9a69f.txt
src/lever_vision_model/Elevator_Lever_Pose-2/train/: labels.cache
src/lever_vision_model/Elevator_Lever_Pose-2/train/labels/: dynamic_lever_10_jpg.rf.51d5babb53e436539eb0175ec73b59e4.txt  dynamic_lever_11_jpg.rf.97a78a887a5b355c3d0e5af8cfbd3d39.txt  dynamic_lever_12_jpg.rf.6de7c540b8a4ef0898e14b5891f84bf2.txt  dynamic_lever_13_jpg.rf.b24e78b71f135a591f5010b9b6ce525f.txt  dynamic_lever_14_jpg.rf.162b7101fc29b666647e6bd7ba95cc48.txt  dynamic_lever_15_jpg.rf.ea35369dd0a3a2caaf95b80187d0f28d.txt  dynamic_lever_16_jpg.rf.4ff4a545fb980190031906f61bb03446.txt  dynamic_lever_17_jpg.rf.4ff971e9717b1d0dd7f257c109ab4bc0.txt  dynamic_lever_18_jpg.rf.0ebaa3c305fe9a0b829b16b55a21c054.txt  dynamic_lever_19_jpg.rf.12ec55462b68fd93e44b313138e05bb4.txt  dynamic_lever_1_jpg.rf.c8eceb0390ae47c35eaf4f0c4e85d2dd.txt  dynamic_lever_20_jpg.rf.43175caff7ec12ef002e1bb917af8d9f.txt  dynamic_lever_21_jpg.rf.36a467b7c227bc3a3a66b29694282be1.txt  (+66 more)
src/lever_vision_model/Elevator_Lever_Pose-2/valid/: labels.cache
src/lever_vision_model/launch/: robot_bringup.launch.py
src/lever_vision_model/lever_vision_model/: collect_data_v2.py  fake_lever_pose.py  find_camera.py  lever_detector.py  lever_test_bridge.py  live_test.py  train_lever_pose.py  vision_moveit_coordinator.py
src/my_robot_control/: package.xml  setup.py
src/my_robot_control/config/: ros2_controllers.yaml
src/my_robot_control/launch/: complete_launch.py
src/my_robot_control/my_robot_control/: arm_direct_ik_to_esp.py  arm_ik_solver.py  arm_mover.py  door_routine_sim.py  test_move.py
src/my_robot_description/robot_stl/drive-download-20251212T092612Z-3-001/: lidar.urdf.xacro  rgbd_camera.urdf.xacro
src/my_robot_description/urdf/: final2.xml
src/my_robot_motion_cpp/: CMakeLists.txt  package.xml
src/my_robot_motion_cpp/launch/: arm_motion.launch.py  arm_motion_test.launch.py  noise_test.launch.py  reachability_map.launch.py  serial_bridge.launch.py  trajectory_stability.launch.py  workspace_sampler.launch.py
src/my_robot_motion_cpp/src/: arm_motion_node.cpp  arm_motion_test_node.cpp  noise_test_node.cpp  reachability_map_node.cpp  serial_bridge_node.cpp  trajectory_stability_node.cpp  workspace_sampler.cpp
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: clean_controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  my_robot.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml
src/my_robot_moveit_config/launch/: demo.launch.py  launch_everything.py  move_group.launch.py
src/my_robot_moveit_config/scripts/: moveit_serial_bridge.py
src/wheel_teleop/: package.xml  setup.cfg  setup.py
src/wheel_teleop/wheel_teleop/: keyboard_teleop.py
(+14 files in other folders)
