<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_motion_cpp</name>
  <version>0.0.0</version>
  <description>ROS2 package for robotic arm motion control with MoveIt2 and ESP32 bridge</description>
  <maintainer email="Yousef.Elabd@hotmail.com">yousef_elabd</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- MoveIt2 dependencies -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>

  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- PCL dependencies -->
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>